--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,79 +25,11 @@ sysinfo = { version = "*", features = ["serde"] }
 tauri-plugin-fs = "2"
 tauri-plugin-opener = "2"
 futures = "0.3.31"
-# https://docs.rs/reqwest/latest/reqwest/#optional-features
-reqwest = { version = "0.12.15", default-features = false, features = ["http2", "rustls-tls", "socks"] }
-#openssl = { version = "0.10", features = ["vendored"] }
 tokio = "1.44"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tauri-plugin-notification = "2"
-tauri-plugin-http = "2"
-obfstr = "0.4.4"
-bytes = { version = "1.10.1", default-features = false, features = ["std"] }
-crossbeam-utils = { version = "0.8.21", default-features = false, features = ["std"] }
-env_logger = { version = "0.11.8", default-features = false, features = ["humantime"] }
-humantime = { version = "2.2.0", default-features = false }
-lexopt = { version = "0.3.1", default-features = false }
-log = { version = "0.4.27", default-features = false, features = ["serde", "std"] }
-once_cell = { version = "1.21.3", default-features = false, features = ["parking_lot", "std"] }
-parking_lot = { version = "0.12.3", default-features = false, features = ["send_guard"] }
-quinn = { version = "0.11.7", features = ["futures-io", "runtime-tokio"] }
-quinn-proto = "0.11.11"
-register-count = { version = "0.1.0", default-features = false, features = ["std"] }
-rustls = { version = "0.23.26" }
-rustls-native-certs = { version = "0.8.1" }
-rustls-pemfile = { version = "2.2.0" }
-rustls-pki-types = "1.11.0"
-#serde = { version = "1.0.217", default-features = false, features = ["derive", "std"] }
-#serde_json = { version = "1.0.138", default-features = false, features = ["std"] }
-socket2 = { version = "0.5.9", default-features = false }
-thiserror = { version = "2.0.12", default-features = false }
-#tokio = { version = "1.38.1", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
-tokio-util = { version = "0.7.14", default-features = false, features = ["compat"] }
-uuid = { version = "1.16.0", default-features = false, features = ["serde", "std"] }
-dotenvy = "0.15.7"
-dotenvy_macro = "0.15.7"
-url = "2.5.4"
-tauri-plugin-sql = { version = "2", features = ["sqlite"] }
-socks5-proto = { path = "../../socks5-server/socks5-proto", default-features = false }
-socks5-server = { path = "../../socks5-server/socks5-server", default-features = false }
-tuic = { path = "../../tuic/tuic", default-features = false }
-tuic-quinn = { path = "../../tuic/tuic-quinn" }
 tauri-plugin-dialog = "2"
-tauri-plugin-android-fs = { version = "9.1.0", features = ["avoid-issue1"] }
+#tauri-plugin-android-fs = { version = "9.1.0", features = ["avoid-issue1"] }
+tauri-plugin-android-fs = { path = "../../tauri-plugin-android-fs", features = ["avoid-issue1"] }
 
 actix-files = "0.6.6"
-actix-multipart = "0.7"
 actix-web = { version = "4", features = ["macros", "compress-brotli", "compress-gzip", "compress-zstd"], default-features = false }
 actix-web-httpauth = "0.8"
-alphanumeric-sort = "1"
-anyhow = "1"
-async-walkdir = "2.1.0"
-bytesize = "2"
-chrono = "0.4"
-chrono-humanize = "0.2"
-clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated", "env"] }
-clap_complete = "4"
-clap_mangen = "0.2"
-colored = "3"
-comrak = { version = "0.38.0", default-features = false }
-dav-server = { version = "0.8.0", features = ["actix-compat"] }
-fast_qr = { version = "0.13.0", features = ["svg"] }
-grass = { version = "0.13", features = ["macro"], default-features = false }
-hex = "0.4"
-httparse = "1"
-if-addrs = "0.13"
-libflate = "2"
-maud = "0.27"
-mime = "0.3"
-nanoid = "0.4"
-percent-encoding = "2"
-port_check = "0.2"
-regex = "1"
-sha2 = "0.10"
-simplelog = "0.12"
-strum = { version = "0.27", features = ["derive"] }
-tar = "0.4"
-tempfile = "3.19.1"
-zip = { version = "2", default-features = false }
