--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tauri-apps/plugin-autostart": "~2.2.0",
     "@tauri-apps/plugin-barcode-scanner": "~2.2.0",
     "@tauri-apps/plugin-biometric": "~2.2.0",
+    "@tauri-apps/plugin-clipboard-manager": "~2.2.2",
     "@tauri-apps/plugin-dialog": "^2.2.1",
     "@tauri-apps/plugin-fs": "~2.2.1",
     "@tauri-apps/plugin-global-shortcut": "~2.2.0",
@@ -32,6 +33,7 @@
     "@tauri-apps/plugin-notification": "~2.2.2",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-sql": "~2.2.0",
+    "svelte-qrcode": "^1.0.1",
     "tauri-plugin-system-info-api": "^2.0.10",
     "tauri-plugin-view-api": "^0.0.5"
   },
