--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -14,7 +14,7 @@
       {
         "title": "localshare",
         "width": 800,
-        "height": 600
+        "height": 800,
       }
     ],
     "security": {
