--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tauri-apps/cli": "^2.5.0",
+    "@zerodevx/svelte-toast": "^0.9.6",
     "svelte": "^5.27.0",
     "svelte-check": "^4.1.6",
     "typescript": "~5.6.3",
