--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.5",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-autostart": "~2.2.0",
     "@tauri-apps/plugin-barcode-scanner": "~2.2.0",
@@ -34,6 +35,7 @@
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-sql": "~2.2.0",
     "svelte-qrcode": "^1.0.1",
+    "tailwindcss": "^4.1.5",
     "tauri-plugin-system-info-api": "^2.0.10",
     "tauri-plugin-view-api": "^0.0.5"
   },
@@ -43,7 +45,9 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tauri-apps/cli": "^2.5.0",
     "@zerodevx/svelte-toast": "^0.9.6",
+    "flowbite-svelte-icons": "^2.1.1",
     "svelte": "^5.27.0",
+    "svelte-5-ui-lib": "^0.12.6",
     "svelte-check": "^4.1.6",
     "typescript": "~5.6.3",
     "vite": "^6.2.6"
