--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tauri-apps/plugin-notification": "~2.2.2",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-sql": "~2.2.0",
+    "@tauri-apps/plugin-store": "~2",
     "svelte-qrcode": "^1.0.1",
     "tailwindcss": "^4.1.5",
     "tauri-plugin-system-info-api": "^2.0.10",
