--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-sql": "~2.2.0",
     "@tauri-apps/plugin-store": "~2",
-    "svelte-qrcode": "^1.0.1",
     "tailwindcss": "^4.1.5",
     "tauri-plugin-system-info-api": "^2.0.10",
     "tauri-plugin-view-api": "^0.0.5"
   },
   "devDependencies": {
+    "@castlenine/svelte-qrcode": "^2.3.0",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
