--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,7 +34,8 @@ axum = "0.8.3"
 tower = { version = "0.5.2", features = ["util"] }
 tower-http = { version = "0.6.1", features = ["fs", "trace"] }
 
-tokio = {version = "1.44.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
+#tokio = {version = "1.44.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
+tokio = {version = "1.44.2", features = ["full"] }
 clap = { version = "4.5", features = ["wrap_help", "env"] }
 clap_complete = "4.5"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
@@ -56,7 +57,8 @@ uuid = { version = "1.7", features = ["v4", "fast-rng"] }
 urlencoding = "2.1"
 xml-rs = "0.8"
 log = { version = "0.4", features = ["std"] }
-socket2 = "0.5"
+socket2 = {version =  "0.5.9", features = ["all"] }
+
 async-stream = "0.3"
 walkdir = "2.3"
 form_urlencoded = "1.2"
@@ -79,3 +81,8 @@ sha2 = "0.10.8"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-store = "2"
 tauri-plugin-sharetarget = { path = "../../tauri-plugin-sharetarget" }
+
+rand = "0.9.1"
+hex = "0.4.3"
+reqwest= { version = "0.12.15", features = ["json"] }
+rcgen = "0.13.2"
