--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "@tauri-apps/plugin-fs": "~2.2.1",
     "@tauri-apps/plugin-global-shortcut": "~2.2.0",
     "@tauri-apps/plugin-http": "~2.3.0",
+    "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-nfc": "~2.2.0",
     "@tauri-apps/plugin-notification": "~2.2.2",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-sql": "~2.2.0",
     "@tauri-apps/plugin-store": "~2",
     "tailwindcss": "^4.1.5",
+    "tauri-plugin-sharetarget-api": "0.1.6",
     "tauri-plugin-system-info-api": "^2.0.10",
-    "tauri-plugin-view-api": "^0.0.5",
-    "tauri-plugin-sharetarget-api": "0.1.6"
+    "tauri-plugin-view-api": "^0.0.5"
   },
   "devDependencies": {
     "@castlenine/svelte-qrcode": "^2.3.0",
