--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localshare",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "type": "module",
   "scripts": {
@@ -14,6 +14,7 @@
     "tauri-and-dev": "tauri android dev",
     "tauri-and-init": "tauri android init",
     "tauri-build-apk": "tauri android build --apk --target aarch64",
+    "tauri-build-apk-debug": "tauri android build --apk --target aarch64 --debug",
     "tauri-build-apk-all": "tauri android build --apk",
     "tauri-build": "tauri build",
     "tauri-build-win": "pnpm tauri build --runner cargo-xwin --target x86_64-pc-windows-msvc"
