--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tauri-apps/cli": "^2.5.0",
     "@zerodevx/svelte-toast": "^0.9.6",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^1.2.2",
     "flowbite-svelte-icons": "^2.1.1",
     "svelte": "^5.27.0",
-    "svelte-5-ui-lib": "^0.12.6",
     "svelte-check": "^4.1.6",
     "typescript": "~5.6.3",
     "vite": "^6.2.6"
