--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@tauri-apps/plugin-nfc": "~2.2.0",
     "@tauri-apps/plugin-notification": "~2.2.2",
     "@tauri-apps/plugin-opener": "^2.2.6",
-    "@tauri-apps/plugin-sql": "~2.2.0",
+    "@tauri-apps/plugin-os": "~2.2.1",
+    "@tauri-apps/plugin-sql": "~2",
     "@tauri-apps/plugin-store": "~2",
+    "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "tailwindcss": "^4.1.5",
     "tauri-plugin-sharetarget-api": "0.1.6",
     "tauri-plugin-system-info-api": "^2.0.10",
