--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -88,3 +88,5 @@ reqwest= { version = "0.12.15", default-features = false,features = ["charset", 
 rcgen = "0.13.2"
 tauri-plugin-log = "2"
 thiserror = "2.0.12"
+tauri-plugin-sql = { path = "../../plugins-workspace/plugins/sql", features = ["sqlite"] }
+tauri-plugin-os = "2"
