--- a/package.json
+++ b/package.json
@@ -21,46 +21,45 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.7",
     "@tauri-apps/api": "^2.5.0",
     "@tauri-apps/plugin-autostart": "~2.2.0",
     "@tauri-apps/plugin-barcode-scanner": "~2.2.0",
-    "@tauri-apps/plugin-biometric": "~2.2.0",
+    "@tauri-apps/plugin-biometric": "~2.2.1",
     "@tauri-apps/plugin-clipboard-manager": "~2.2.2",
     "@tauri-apps/plugin-dialog": "^2.2.1",
     "@tauri-apps/plugin-fs": "~2.2.1",
     "@tauri-apps/plugin-global-shortcut": "~2.2.0",
     "@tauri-apps/plugin-http": "~2.3.0",
-    "@tauri-apps/plugin-log": "~2",
+    "@tauri-apps/plugin-log": "~2.4.0",
     "@tauri-apps/plugin-nfc": "~2.2.0",
     "@tauri-apps/plugin-notification": "~2.2.2",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-os": "~2.2.1",
-    "@tauri-apps/plugin-sql": "~2",
-    "@tauri-apps/plugin-store": "~2",
+    "@tauri-apps/plugin-sql": "~2.2.0",
+    "@tauri-apps/plugin-store": "~2.2.0",
+    "drizzle-orm": "^0.40.1",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
-    "tailwindcss": "^4.1.5",
+    "svelte-inspect-value": "^0.5.0",
+    "tailwindcss": "^4.1.7",
     "tauri-plugin-sharetarget-api": "0.1.6",
     "tauri-plugin-system-info-api": "^2.0.10",
-    "tauri-plugin-view-api": "^0.0.5",
-    "drizzle-orm": "^0.40.1",
-    "svelte-inspect-value": "^0.5.0"
-
+    "tauri-plugin-view-api": "^0.0.5"
   },
   "devDependencies": {
     "@castlenine/svelte-qrcode": "^2.3.0",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.20.7",
+    "@sveltejs/kit": "^2.21.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tauri-apps/cli": "^2.5.0",
     "@zerodevx/svelte-toast": "^0.9.6",
+    "drizzle-kit": "^0.30.6",
     "flowbite": "^3.1.2",
-    "flowbite-svelte": "^1.2.2",
+    "flowbite-svelte": "^1.2.3",
     "flowbite-svelte-icons": "^2.1.1",
-    "svelte": "^5.27.0",
-    "svelte-check": "^4.1.6",
+    "svelte": "^5.30.1",
+    "svelte-check": "^4.2.1",
     "typescript": "~5.6.3",
-    "vite": "^6.2.6",
-    "drizzle-kit": "^0.30.5"
+    "vite": "^6.3.5"
   }
 }
