--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,8 +20,8 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = ["devtools", "config-json5", "rustls-tls", "webview-data-url"] }
 tauri-plugin-view = "0.0.5"
-network-interface = { version = "*", features = ["serde"] }
-sysinfo = { version = "*", features = ["serde"] }
+network-interface = { version = "2.0.1", features = ["serde"] }
+sysinfo = { version = "0.35.1", features = ["serde"] }
 tauri-plugin-fs = "2"
 tauri-plugin-opener = "2"
 futures = "0.3.31"
@@ -32,10 +32,10 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 axum = { version="0.8.4", features = ["query", "macros"] }
 tower = { version = "0.5.2", features = ["util"] }
-tower-http = { version = "0.6.1", features = ["fs", "trace"] }
+tower-http = { version = "0.6.4", features = ["fs", "trace"] }
 
 #tokio = {version = "1.44.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
-tokio = {version = "1.44.2", features = ["full"] }
+tokio = {version = "1.45.0", features = ["full"] }
 clap = { version = "4.5", features = ["wrap_help", "env"] }
 clap_complete = "4.5"
 chrono = { version = "0.4",  features = ["clock"] }
@@ -49,35 +49,35 @@ async_zip = { version = "0.0.17", default-features = false, features = ["deflate
 headers = "0.4"
 mime_guess = "2.0"
 if-addrs = "0.13"
-rustls-pemfile = { version = "2.0", optional = true }
+rustls-pemfile = { version = "2.2", optional = true }
 tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "tls12"] }
 md5 = "0.7"
-lazy_static = "1.4"
-uuid = { version = "1.7", features = ["v4", "fast-rng"] }
+lazy_static = "1.5"
+uuid = { version = "1.16", features = ["v4", "fast-rng"] }
 urlencoding = "2.1"
 xml-rs = "0.8"
 log = { version = "0.4", features = ["std"] }
 socket2 = {version =  "0.5.9", features = ["all"] }
 
 async-stream = "0.3"
-walkdir = "2.3"
+walkdir = "2.5"
 form_urlencoded = "1.2"
-alphanumeric-sort = "1.4"
+alphanumeric-sort = "1.5"
 content_inspector = "0.2"
 anyhow = "1.0"
 chardetng = "0.1"
 glob = "0.3"
-indexmap = "2.2"
+indexmap = "2.9"
 serde_yaml = "0.9"
 sha-crypt = "0.5"
 base64 = "0.22"
 smart-default = "0.7"
-rustls-pki-types = "1.2"
+rustls-pki-types = "1.12"
 hyper-util = { version = "0.1", features = ["server-auto", "tokio", "server-graceful"] }
 http-body-util = "0.1"
-bytes = "1.5"
+bytes = "1.10"
 pin-project-lite = "0.2"
-sha2 = "0.10.8"
+sha2 = "0.10.9"
 tauri-plugin-clipboard-manager = "2"
 tauri-plugin-store = "2"
 tauri-plugin-sharetarget = { path = "../../tauri-plugin-sharetarget" }
