--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "localshare"
-version = "0.3.0"
+version = "0.4.0"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -88,5 +88,14 @@ reqwest= { version = "0.12.15", default-features = false,features = ["charset", 
 rcgen = "0.13.2"
 tauri-plugin-log = "2"
 thiserror = "2.0.12"
-tauri-plugin-sql = { path = "../../plugins-workspace/plugins/sql", features = ["sqlite"] }
+tauri-plugin-sql = "2.2"
+#tauri-plugin-sql = { path = "../../plugins-workspace/plugins/sql", features = ["sqlite"] }
 tauri-plugin-os = "2"
+
+# Feature "bundled-sqlcipher" of libsqlite3 make android build fail
+#libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher"] }
+#libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }
+
+[features]
+default = []
+tls = ["rustls-pemfile", "tokio-rustls"]
