--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -40,6 +40,9 @@
 //    "externalBin": [
 //      "binaries/binapp"
 //    ]
+    "resources": [
+      "../res/**/*"
+    ]
   },
 //  "plugins": {
 //    "sql": {
