successfully read resource file on Android & Linux

--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -41,7 +41,9 @@
 //      "binaries/binapp"
 //    ]
     "resources": [
-      "../res/**/*"
+      // https://v2.tauri.app/develop/resources/
+      // relative to src-tauri/
+      "res/**/*"
     ]
   },
 //  "plugins": {
