show topic (pass route info using global window.* variable, tauri requires ssr/spa, cannot use sveltekit's dynamic router)

--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -20,6 +20,7 @@
 //        "url": "http://127.0.0.1:4802"
       }
     ],
+    "withGlobalTauri": true,
     "security": {
       "csp": null
     }
