--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "flowbite": "^3.1.2",
     "flowbite-svelte": "^1.2.3",
     "flowbite-svelte-icons": "^2.1.1",
-    "svelte": "^5.30.1",
+    "svelte": "https://pkg.pr.new/svelte@async",
     "svelte-check": "^4.2.1",
     "tsx": "^4.19.3",
     "typescript": "~5.6.3",
