--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-os": "~2.2.1",
     "@tauri-apps/plugin-store": "~2.2.0",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.40.1",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "svelte-inspect-value": "^0.5.0",
