--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "@tauri-apps/plugin-barcode-scanner": "~2.2.0",
     "@tauri-apps/plugin-biometric": "~2.2.1",
     "@tauri-apps/plugin-clipboard-manager": "~2.2.2",
-    "@tauri-apps/plugin-dialog": "^2.2.1",
+    "@tauri-apps/plugin-dialog": "^2.2.2",
     "@tauri-apps/plugin-fs": "~2.2.1",
-    "@tauri-apps/plugin-global-shortcut": "~2.2.0",
+    "@tauri-apps/plugin-global-shortcut": "~2.2.1",
     "@tauri-apps/plugin-http": "~2.3.0",
     "@tauri-apps/plugin-log": "~2.4.0",
     "@tauri-apps/plugin-nfc": "~2.2.0",
     "@tauri-apps/plugin-notification": "~2.2.2",
-    "@tauri-apps/plugin-opener": "^2.2.6",
+    "@tauri-apps/plugin-opener": "^2.2.7",
     "@tauri-apps/plugin-os": "~2.2.1",
     "@tauri-apps/plugin-store": "~2.2.0",
     "dayjs": "^1.11.13",
-    "drizzle-orm": "^0.40.1",
+    "drizzle-orm": "1.0.0-beta.1-c0277c0",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "svelte-inspect-value": "^0.5.0",
     "tailwindcss": "^4.1.7",
@@ -53,18 +53,18 @@
   "devDependencies": {
     "@castlenine/svelte-qrcode": "^2.3.0",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.21.0",
+    "@sveltejs/kit": "^2.21.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tauri-apps/cli": "^2.5.0",
     "@zerodevx/svelte-toast": "^0.9.6",
     "better-sqlite3": "^11.10.0",
-    "drizzle-kit": "^0.30.6",
+    "drizzle-kit": "1.0.0-beta.1-c0277c0",
     "flowbite": "^3.1.2",
-    "flowbite-svelte": "^1.2.3",
+    "flowbite-svelte": "^1.4.2",
     "flowbite-svelte-icons": "^2.1.1",
-    "svelte": "https://pkg.pr.new/svelte@async",
+    "svelte": "^5.32.1",
     "svelte-check": "^4.2.1",
-    "tsx": "^4.19.3",
+    "tsx": "^4.19.4",
     "typescript": "~5.6.3",
     "vite": "^6.3.5"
   }
