--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tauri-apps/plugin-store": "~2.2.0",
     "dayjs": "^1.11.13",
     "drizzle-orm": "1.0.0-beta.1-c0277c0",
+    "flowbite-svelte": "link:../flowbite-svelte",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "svelte-inspect-value": "^0.5.0",
     "tailwindcss": "^4.1.7",
@@ -60,7 +61,6 @@
     "better-sqlite3": "^11.10.0",
     "drizzle-kit": "1.0.0-beta.1-c0277c0",
     "flowbite": "^3.1.2",
-    "flowbite-svelte": "^1.4.2",
     "flowbite-svelte-icons": "^2.1.1",
     "svelte": "^5.32.1",
     "svelte-check": "^4.2.1",
