--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@tauri-apps/plugin-store": "~2.2.0",
     "dayjs": "^1.11.13",
     "drizzle-orm": "1.0.0-beta.1-c0277c0",
-    "flowbite-svelte": "link:../flowbite-svelte",
+    "flowbite-svelte": "^1.4.3",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "svelte-inspect-value": "^0.5.0",
     "tailwindcss": "^4.1.7",
