--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localshare",
-  "version": "0.5.1",
+  "version": "0.5.3",
   "description": "",
   "type": "module",
   "scripts": {
@@ -42,8 +42,9 @@
     "@tauri-apps/plugin-os": "~2.2.1",
     "@tauri-apps/plugin-store": "~2.2.0",
     "dayjs": "^1.11.13",
+    "dexie": "^4.0.11",
     "drizzle-orm": "1.0.0-beta.1-c0277c0",
-    "flowbite-svelte": "^1.4.3",
+    "flowbite-svelte": "link:../flowbite-svelte",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "svelte-inspect-value": "^0.5.0",
     "tailwindcss": "^4.1.7",
