--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localshare",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "description": "",
   "type": "module",
   "scripts": {
@@ -44,6 +44,7 @@
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "drizzle-orm": "1.0.0-beta.1-c0277c0",
+    "emoji-js": "^3.8.1",
     "flowbite-svelte": "link:../flowbite-svelte",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "svelte-inspect-value": "^0.5.0",
