--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "localshare"
-version = "0.5.5"
+version = "0.5.6"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -109,6 +109,7 @@ url = "2.5.4"
 
 pem = "3.0.5"
 rustls = "0.23.27"
+zstd = "0.13.3"
 [features]
 default = []
 tls = []
