HTTP server listen on locally can forward to remote HTTPS server, can open js-heavy website(though slow)

--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -16,8 +16,8 @@
         "width": 800,
         "height": 800,
 // //      https://v2.tauri.app/reference/config/#windowconfig
-//        "proxyUrl": "socks5://127.0.0.1:4801",
-//        "url": "http://127.0.0.1:4802"
+//        "proxyUrl": "socks5://127.0.0.1:4807",
+        "url": "http://127.0.0.1:4802"
       }
     ],
     "withGlobalTauri": true,
