--- a/src-tauri/tauri.conf.json5
+++ b/src-tauri/tauri.conf.json5
@@ -15,7 +15,7 @@
         "title": "localshare",
         "width": 800,
         "height": 800,
-                "url": "http://127.0.0.1:4805"
+//                "url": "http://127.0.0.1:4805"
 // //      https://v2.tauri.app/reference/config/#windowconfig
 //        "proxyUrl": "socks5://127.0.0.1:4807",
       }
