remove mic plugin as it causes crash

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -132,7 +132,7 @@ dotenvy_macro = "0.15.7"
 async-socks5 = "0.6.0"
 httparse = "1.10.1"
 obfstr = "0.4.4"
-tauri-plugin-mic-recorder = "2.0.0"
+#tauri-plugin-mic-recorder = "2.0.0"
 
 [features]
 default = []
