--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@mnlphlp/plugin-blec": "^0.4.1",
     "@tailwindcss/vite": "^4.1.8",
     "@tauri-apps/api": "^2.5.0",
@@ -36,7 +39,7 @@
     "@tauri-apps/plugin-dialog": "^2.2.2",
     "@tauri-apps/plugin-fs": "~2.2.1",
     "@tauri-apps/plugin-global-shortcut": "~2.2.1",
-    "@tauri-apps/plugin-http": "~2.3.0",
+    "@tauri-apps/plugin-http": "~2.4.4",
     "@tauri-apps/plugin-log": "~2.4.0",
     "@tauri-apps/plugin-nfc": "~2.2.0",
     "@tauri-apps/plugin-notification": "~2.2.2",
@@ -50,9 +53,9 @@
     "emoji-js": "^3.8.1",
     "flowbite-svelte": "link:../flowbite-svelte",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
+    "svelte-fa": "^4.0.4",
     "svelte-inspect-value": "^0.5.0",
     "tailwindcss": "^4.1.8",
-    "tauri-plugin-mic-recorder-api": "^2.0.0",
     "tauri-plugin-sharetarget-api": "0.1.6",
     "tauri-plugin-system-info-api": "^2.0.10",
     "tauri-plugin-view-api": "^0.0.5"
@@ -68,7 +71,6 @@
     "discourse2": "^1.1.26",
     "drizzle-kit": "1.0.0-beta.1-c0277c0",
     "flowbite": "^3.1.2",
-    "flowbite-svelte-icons": "^2.2.0",
     "svelte": "^5.33.14",
     "svelte-check": "^4.2.1",
     "tsx": "^4.19.4",
