--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "tauri": "tauri",
+    "td": "tauri dev",
     "tauri-dev": "tauri dev",
+    "tad": "tauri android dev",
     "tauri-and-dev": "tauri android dev",
     "tauri-and-init": "tauri android init",
+    "tba": "tauri android build --apk --target aarch64",
     "tauri-build-apk": "tauri android build --apk --target aarch64",
     "tauri-build-apk-debug": "tauri android build --apk --target aarch64 --debug",
     "tauri-build-apk-all": "tauri android build --apk",
+    "tb": "tauri build",
     "tauri-build": "tauri build",
+    "tbw": "pnpm tauri build --runner cargo-xwin --target x86_64-pc-windows-msvc",
     "tauri-build-win": "pnpm tauri build --runner cargo-xwin --target x86_64-pc-windows-msvc",
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
