using md editor carta to reply to post(backend not implemented yet)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@cartamd/plugin-attachment": "^4.2.0",
+    "@cartamd/plugin-code": "^4.2.0",
+    "@cartamd/plugin-emoji": "^4.3.0",
+    "@cartamd/plugin-math": "^4.3.1",
+    "@cartamd/plugin-slash": "^4.2.0",
+    "@cartamd/plugin-tikz": "^4.2.2",
     "@fabianlars/tauri-plugin-oauth": "2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -51,12 +57,14 @@
     "@tauri-apps/plugin-opener": "^2.2.7",
     "@tauri-apps/plugin-os": "~2.2.1",
     "@tauri-apps/plugin-store": "~2.2.0",
+    "carta-md": "^4.11.1",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "dotenv": "^16.5.0",
     "drizzle-orm": "1.0.0-beta.1-c0277c0",
     "emoji-js": "^3.8.1",
     "flowbite-svelte": "link:../flowbite-svelte",
+    "isomorphic-dompurify": "^2.25.0",
     "plugin-sql": "link:../plugins-workspace/plugins/sql",
     "svelte-fa": "^4.0.4",
     "svelte-inspect-value": "^0.5.0",
