--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,16 +40,16 @@ tauri-plugin-dialog = "2"
 tauri-plugin-android-fs = { path = "../../tauri-plugin-android-fs", features = ["avoid-issue1"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-axum = { version="0.8.4", features = ["query", "macros"] }
+axum = { version = "0.8.4", features = ["query", "macros"] }
 tower = { version = "0.5.2", features = ["util"] }
 tower-http = { version = "0.6.6", features = ["fs", "trace"] }
 
 #tokio = {version = "1.44.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal"] }
-tokio = {version = "1.45.1", features = ["full"] }
+tokio = { version = "1.45.1", features = ["full"] }
 clap = { version = "4.5", features = ["wrap_help", "env"] }
 clap_complete = "4.5"
-chrono = { version = "0.4",  features = ["clock"] }
-tokio-util = { version = "0.7",  features = ["io-util", "compat"] }
+chrono = { version = "0.4", features = ["clock"] }
+tokio-util = { version = "0.7", features = ["io-util", "compat"] }
 hyper = { version = "1", features = ["http1", "server"] }
 percent-encoding = "2.3"
 serde = { version = "1", features = ["derive", "std"] }
@@ -67,7 +67,7 @@ uuid = { version = "1.17", features = ["v4", "fast-rng"] }
 urlencoding = "2.1"
 xml-rs = "0.8"
 log = { version = "0.4", features = ["std", "serde"] }
-socket2 = {version =  "0.5.10", features = ["all"] }
+socket2 = { version = "0.5.10", features = ["all"] }
 
 async-stream = "0.3"
 walkdir = "2.5"
@@ -94,7 +94,7 @@ tauri-plugin-sharetarget = { path = "../../tauri-plugin-sharetarget" }
 
 rand = "0.9.1"
 hex = "0.4.3"
-reqwest= { version = "0.12.20", default-features = false,features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "blocking", "socks", "cookies", "brotli", "gzip", "deflate", "zstd"] }
+reqwest = { version = "0.12.20", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "blocking", "socks", "cookies", "brotli", "gzip", "deflate", "zstd"] }
 rcgen = "0.13.2"
 tauri-plugin-log = "2"
 thiserror = "2.0.12"
@@ -136,6 +136,8 @@ tauri-plugin-http = { version = "2.4.4", features = ["unsafe-headers"] }
 #tauri-plugin-mic-recorder = { git = "https://github.com/ayangweb/tauri-plugin-mic-recorder", branch = "fix-mobile" }
 #tauri-plugin-mic-recorder = "2.0.0"
 tauri-plugin-oauth = "2"
+
+pnet = "0.35.0"
 
 [features]
 default = []
